--- a/index.html
+++ b/index.html
@@ -1,91 +1,227 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-  <!-- stylesheet -->
-  <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio Website</title>
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
   <link rel="icon" href="favicon.ico">
-
-  <!-- google fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oxygen&display=swap" rel="stylesheet">
-
-  <!-- font-awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous"
-    referrerpolicy="no-referrer" />
-
-  <!-- Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-  <title>Ken Barrameda - a web designer & developer </title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
 </head>
 
-<!-- Nav Bar -->
+<body>
+  <div class="container">
+    <!-- Section 1 -->
+    <section class="section-1 center" id="section-1">
+      <h1 class="section-1-heading">
+        A Front End Developer
+      </h1>
+      <img src="images/KenB.jpg" alt="Ken Barrameda" class="person-img" />
+      <h3 class="person-name">Ken Barrameda</h3>
+      <a href="#section-3" class="section-1-btn">Projects</a>
+    </section>
+    <!-- End of Section 1 -->
 
+    <!-- Navbar -->
+    <nav class="navbar center">
+      <a href="#section-1" class="navbar-link">Home</a>
+      <a href="#section-2" class="navbar-link">About</a>
+      <a href="#section-3" class="navbar-link">Portfolio</a>
+      <a href="#section-4" class="navbar-link">Contact</a>
+    </nav>
 
+    <!-- End of Navbar -->
 
+    <!-- Section 2 -->
+    <section class="section-2" id="section-2">
+      <h1 class="section-heading section-2-heading">About Me</h1>
+      <div class="progress-bars-wrapper">
+        <div class="progress-bar">
+          <p class="progress-text">
+            HTML
+            <span></span>%
+          </p>
+          <div class="progress-percent"></div>
+        </div>
+        <div class="progress-bar">
+          <p class="progress-text">
+            CSS
+            <span></span>%
+          </p>
+          <div class="progress-percent"></div>
+        </div>
+        <div class="progress-bar">
+          <p class="progress-text">
+            JavaScript
+            <span></span>%
+          </p>
+          <div class="progress-percent"></div>
+        </div>
+        <div class="progress-bar">
+          <p class="progress-text">
+            Bootstrap
+            <span></span>%
+          </p>
+          <div class="progress-percent"></div>
+        </div>
+        <div class="progress-bar">
+          <p class="progress-text">
+            ReactJS
+            <span></span>%
+          </p>
+          <div class="progress-percent"></div>
+        </div>
+        <div class="progress-bar">
+          <p class="progress-text">
+            NodeJS
+            <span></span>%
+          </p>
+          <div class="progress-percent"></div>
+        </div>
+        <div class="progress-bar">
+          <p class="progress-text">
+            MongoDB
+            <span></span>%
+          </p>
+          <div class="progress-percent"></div>
+        </div>
+      </div>
+      <div class="services">
+        <div class="service">
+          <i class="far fa-lightbulb"></i>
+          <h2 class="service-heading">Creative</h2>
+        </div>
+        <div class="service">
+          <i class="fas fa-cut"></i>
+          <h2 class="service-heading">Problem Solving</h2>
+        </div>
+        <div class="service">
+          <i class="fas fa-tachometer-alt"></i>
+          <h2 class="service-heading">Fast</h2>
+        </div>
+        <div class="service">
+          <i class="fas fa-rocket"></i>
+          <h2 class="service-heading">Dynamic</h2>
+        </div>
+      </div>
+    </section>
+    <!-- End of Section 2 -->
 
-<!-- Top Container -->
-<div class="top-container">
-  <img class="cloud-1" src="images/cloud.png" alt="cloud-img">
-  <img class="cloud-2" src="images/darkcloud.png" alt="darkcloud-img">
-  <h1>I'm Ken.</h1>
-  <h2>a web developer.</h2>
-  <img class="cloud-3" src="images/cloud.png" alt="cloud-img">
-  <img class="cloud-4" src="images/darkcloud.png" alt="darkcloud-img">
-  <!-- <img src="images/mountain.png" alt="mountain-img"> -->
+    <!-- Section 3 -->
+    <section class="section-3" id="section-3">
+      <h1 class="section-heading section-3-heading">My Projects</h1>
+      <div class="projects-wrapper center">
+        <div class="project">
+          <div class="project-text">
+            <h2 class="project-name">architect website</h2>
+            <h4 class="project-technologies">HTML / CSS / JS</h4>
+          </div>
+          <img src="images/project-1.jpg" class="project-img" />
+          <a href="https://www.youtube.com/watch?v=3J-EFMzz94g" class="project-link" target="_blank">Go to Website</a>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2 class="project-name">Budget App</h2>
+            <h4 class="project-technologies">ReactJS</h4>
+          </div>
+          <img src="images/project-2.jpg" class="project-img" />
+          <a href="https://www.youtube.com/watch?v=fDffQYs2WB0" class="project-link" target="_blank">Go to Website</a>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2 class="project-name">wine house</h2>
+            <h4 class="project-technologies">HTML / CSS / JS</h4>
+          </div>
+          <img src="images/project-3.jpg" class="project-img" />
+          <a href="https://www.youtube.com/watch?v=jtmuopTpzGE" class="project-link" target="_blank">Go to Website</a>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2 class="project-name">task manager</h2>
+            <h4 class="project-technologies">ReactJS</h4>
+          </div>
+          <img src="images/project-4.jpg" class="project-img" />
+          <a href="https://www.youtube.com/watch?v=fqup-BL3VjI" class="project-link" target="_blank">Go to Website</a>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2 class="project-name">The Road</h2>
+            <h4 class="project-technologies">HTML / CSS / JS</h4>
+          </div>
+          <img src="images/project-5.jpg" class="project-img" />
+          <a href="https://www.youtube.com/watch?v=qmyN7lYY_xo" class="project-link" target="_blank">Go to Website</a>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2 class="project-name">food recipe app</h2>
+            <h4 class="project-technologies">ReactJS</h4>
+          </div>
+          <img src="images/project-6.jpg" class="project-img" />
+          <a href="https://www.youtube.com/watch?v=d1vT4kkTCaw" class="project-link" target="_blank">Go to Website</a>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2 class="project-name">slideshow</h2>
+            <h4 class="project-technologies">HTML / CSS / JS</h4>
+          </div>
+          <img src="images/project-7.jpg" class="project-img" />
+          <a href="https://www.youtube.com/watch?v=1qhSSp2q7n4" class="project-link" target="_blank">Go to Website</a>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2 class="project-name">Hamburger menu</h2>
+            <h4 class="project-technologies">HTML / CSS / JS</h4>
+          </div>
+          <img src="images/project-8.jpg" class="project-img" />
+          <a href="https://www.youtube.com/watch?v=9Q7wy8r3i8w" class="project-link" target="_blank">Go to Website</a>
+        </div>
+        <div class="project">
+          <div class="project-text">
+            <h2 class="project-name">CSS grid menu</h2>
+            <h4 class="project-technologies">HTML / CSS / JS</h4>
+          </div>
+          <img src="images/project-9.jpg" class="project-img" />
+          <a href="" class="project-link" target="_blank">Go to Website</a>
+        </div>
+      </div>
+    </section>
+    <!-- End of Section 3 -->
 
-  <img class="future-picture" src="images/futuristic.png" alt="futuristic-img">
-</div>
+    <!-- Section 4 -->
+    <section class="section-4" id="section-4">
+      <h1 class="section-heading section-4-heading">Contact Me</h1>
+      <form class="contact-form center">
+        <input type="text" placeholder="Name" />
+        <input type="email" placeholder="Email" />
+        <textarea placeholder="Message"></textarea>
+        <input type="submit" value="Submit" class="contact-form-btn" />
+      </form>
+    </section>
+    <!-- End of Section 4 -->
 
+    <!-- Section 5 -->
+    <footer class="section-5 center">
+      <div class="social-media">
+        <a href="#none" class="social-media-link">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/ken-barrameda" class="social-media-link">
+          <i class="fab fa-linkedin"></i>
+        </a>
 
-
-<!-- Middle Container -->
-<div class="middle-container">
-  <div class="profile">
-    <img class="my-profile " src="images/my-profile.png" alt="">
-    <h2>Hello.</h2>
-    <p>I'm a Full Stack developer based in Toronto, Canada.</p>
+      </div>
+      <p class="copyright">
+        Copyright &copy; Ken Barrameda. All Rights Reserved
+      </p>
+    </footer>
+    <!-- End of Section 5 -->
   </div>
-  <hr>
-  <div class="skills">
-    <h2>My Skills.</h2>
-    <div class="skill-row">
-      <img class="computer-picture" src="images/computer.png" alt="">
-      <h3>Design and Development</h3>
-      <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
-    </div>
 
-    <div class="skill-row">
-      <img class="chilli-img" src="images/chillies.png" alt="chillies-img">
-
-      <h3>Hot Wings Challenge</h3>
-      <p>But my best skill is actually in eating hot wings. I am the undisputed queen of hot wing challenges. Ghost Peppers and Carolina Reapers are my favourite snacks.</p>
-
-    </div>
-  </div>
-  <hr>
-  <div class="contact-me">
-    <h2>I can help.</h2>
-    <h3>I'm currently available for freelance work.</h3>
-    <p>If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
-
-    <a class="btn" href="mailto:kenbarrameda@outlook.com">CONTACT ME</a>
-  </div>
-</div>
-
-
-<div class="bottom-container">
-  <a class="footer-link" href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i> LinkedIn</a>
-  <a class="footer-link" href="https://github.com/captainleftovers"><i class="fab fa-github"></i> GitHub</a>
-
-  <p class="copyright">© Ken Barrameda. All rights reserved.</p>
-</div>
+  <script src="script.js"></script>
 </body>
 
 </html>
