--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-1.jpg" class="project-img" />
-          <a href="https://www.youtube.com/watch?v=3J-EFMzz94g" class="project-link" target="_blank">Go to Website</a>
+          <a href="#" class="project-link" target="_blank"></a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -129,7 +129,7 @@
             <h4 class="project-technologies">ReactJS</h4>
           </div>
           <img src="images/project-2.jpg" class="project-img" />
-          <a href="https://www.youtube.com/watch?v=fDffQYs2WB0" class="project-link" target="_blank">Go to Website</a>
+          <a href="#" class="project-link" target="_blank"></a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -137,7 +137,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-3.jpg" class="project-img" />
-          <a href="https://www.youtube.com/watch?v=jtmuopTpzGE" class="project-link" target="_blank">Go to Website</a>
+          <a href="#" class="project-link" target="_blank"></a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -145,7 +145,7 @@
             <h4 class="project-technologies">ReactJS</h4>
           </div>
           <img src="images/project-4.jpg" class="project-img" />
-          <a href="https://www.youtube.com/watch?v=fqup-BL3VjI" class="project-link" target="_blank">Go to Website</a>
+          <a href="#" class="project-link" target="_blank"></a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -153,7 +153,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-5.jpg" class="project-img" />
-          <a href="https://www.youtube.com/watch?v=qmyN7lYY_xo" class="project-link" target="_blank">Go to Website</a>
+          <a href="#" class="project-link" target="_blank"></a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -161,7 +161,7 @@
             <h4 class="project-technologies">ReactJS</h4>
           </div>
           <img src="images/project-6.jpg" class="project-img" />
-          <a href="https://www.youtube.com/watch?v=d1vT4kkTCaw" class="project-link" target="_blank">Go to Website</a>
+          <a href="#" class="project-link" target="_blank"></a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -169,7 +169,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-7.jpg" class="project-img" />
-          <a href="https://www.youtube.com/watch?v=1qhSSp2q7n4" class="project-link" target="_blank">Go to Website</a>
+          <a href="#" class="project-link" target="_blank"></a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -177,7 +177,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-8.jpg" class="project-img" />
-          <a href="https://www.youtube.com/watch?v=9Q7wy8r3i8w" class="project-link" target="_blank">Go to Website</a>
+          <a href="#" class="project-link" target="_blank"></a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -185,7 +185,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-9.jpg" class="project-img" />
-          <a href="" class="project-link" target="_blank">Go to Website</a>
+          <a href="#" class="project-link" target="_blank"></a>
         </div>
       </div>
     </section>
