--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1 class="section-1-heading">
         A Front End Developer
       </h1>
-      <img src="images/KenB.jpg" alt="Ken Barrameda" class="person-img" />
+      <img src="images/KenBarrameda.jpg" alt="Ken Barrameda" class="person-img" />
       <h3 class="person-name">Ken Barrameda</h3>
       <a href="#section-3" class="section-1-btn">Projects</a>
     </section>
