--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio Website</title>
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
   <link rel="icon" href="favicon.ico">
   <!-- Google Fonts -->
@@ -20,7 +20,7 @@
       <h1 class="section-1-heading">
         A Front End Developer
       </h1>
-      <img src="images/KenBarrameda.jpg" alt="Ken Barrameda" class="person-img" />
+      <img src="images/KenB.jpg" alt="Ken Barrameda" class="person-img" />
       <h3 class="person-name">Ken Barrameda</h3>
       <a href="#section-3" class="section-1-btn">Projects</a>
     </section>
@@ -92,20 +92,37 @@
       </div>
       <div class="services">
         <div class="service">
-          <i class="far fa-lightbulb"></i>
-          <h2 class="service-heading">Creative</h2>
+          <i class="fab fa-html5"></i>
+          <h2 class="service-heading">HTML</h2>
         </div>
         <div class="service">
-          <i class="fas fa-cut"></i>
-          <h2 class="service-heading">Problem Solving</h2>
+          <i class="fab fa-css3-alt"></i>
+          <h2 class="service-heading">CSS3</h2>
         </div>
         <div class="service">
-          <i class="fas fa-tachometer-alt"></i>
-          <h2 class="service-heading">Fast</h2>
+          <i class="fab fa-js-square"></i>
+          <h2 class="service-heading">JAVASCRIPT</h2>
         </div>
         <div class="service">
-          <i class="fas fa-rocket"></i>
-          <h2 class="service-heading">Dynamic</h2>
+          <i class="fab fa-bootstrap"></i>
+          <h2 class="service-heading">BOOTSTRAP</h2>
+        </div>
+
+        <div class="service">
+          <i class="fab fa-react"></i>
+          <h2 class="service-heading">ReactJS</h2>
+        </div>
+        <div class="service">
+          <i class="fab fa-node-js"></i>
+          <h2 class="service-heading">NodeJS</h2>
+        </div>
+        <div class="service">
+          <i class="fas fa-database"></i>
+          <h2 class="service-heading">MongoDB</h2>
+        </div>
+        <div class="service">
+          <i class="fab fa-github"></i>
+          <h2 class="service-heading">GITHUB</h2>
         </div>
       </div>
     </section>
@@ -121,7 +138,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-1.jpg" class="project-img" />
-          <a href="#" class="project-link" target="_blank"></a>
+          <a href="https://www.youtube.com/watch?v=3J-EFMzz94g" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -129,7 +146,7 @@
             <h4 class="project-technologies">ReactJS</h4>
           </div>
           <img src="images/project-2.jpg" class="project-img" />
-          <a href="#" class="project-link" target="_blank"></a>
+          <a href="https://www.youtube.com/watch?v=fDffQYs2WB0" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -137,7 +154,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-3.jpg" class="project-img" />
-          <a href="#" class="project-link" target="_blank"></a>
+          <a href="https://www.youtube.com/watch?v=jtmuopTpzGE" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -145,7 +162,7 @@
             <h4 class="project-technologies">ReactJS</h4>
           </div>
           <img src="images/project-4.jpg" class="project-img" />
-          <a href="#" class="project-link" target="_blank"></a>
+          <a href="https://www.youtube.com/watch?v=fqup-BL3VjI" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -153,7 +170,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-5.jpg" class="project-img" />
-          <a href="#" class="project-link" target="_blank"></a>
+          <a href="https://www.youtube.com/watch?v=qmyN7lYY_xo" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -161,15 +178,15 @@
             <h4 class="project-technologies">ReactJS</h4>
           </div>
           <img src="images/project-6.jpg" class="project-img" />
-          <a href="#" class="project-link" target="_blank"></a>
+          <a href="https://www.youtube.com/watch?v=d1vT4kkTCaw" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
-            <h2 class="project-name">slideshow</h2>
-            <h4 class="project-technologies">HTML / CSS / JS</h4>
+            <h2 class="project-name">DNA TRANSITION</h2>
+            <h4 class="project-technologies">HTML / CSS </h4>
           </div>
-          <img src="images/project-7.jpg" class="project-img" />
-          <a href="#" class="project-link" target="_blank"></a>
+          <img src="images/DNA.png" class="project-img" />
+          <a href="DNATransition/index.html" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -177,15 +194,15 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-8.jpg" class="project-img" />
-          <a href="#" class="project-link" target="_blank"></a>
+          <a href="https://www.youtube.com/watch?v=9Q7wy8r3i8w" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
-            <h2 class="project-name">CSS grid menu</h2>
-            <h4 class="project-technologies">HTML / CSS / JS</h4>
+            <h2 class="project-name">Student Hub</h2>
+            <h4 class="project-technologies">HTML / CSS(Bootstrap) </h4>
           </div>
-          <img src="images/project-9.jpg" class="project-img" />
-          <a href="#" class="project-link" target="_blank"></a>
+          <img src="images/project-9.png" class="project-img" />
+          <a href="StudentHub/index.html" class="project-link" target="_blank">Go to Website</a>
         </div>
       </div>
     </section>
@@ -206,7 +223,7 @@
     <!-- Section 5 -->
     <footer class="section-5 center">
       <div class="social-media">
-        <a href="#none" class="social-media-link">
+        <a href="https://github.com/captainleftovers" class="social-media-link">
           <i class="fab fa-github"></i>
         </a>
         <a href="https://www.linkedin.com/in/ken-barrameda" class="social-media-link">
