--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-1.jpg" class="project-img" />
-          <a href="https://www.youtube.com/watch?v=3J-EFMzz94g" class="project-link" target="_blank">Go to Website</a>
+          <a href="ArchitectWebsite/index.html" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
