--- a/ArchitectWebsite/index.html
+++ b/ArchitectWebsite/index.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Archi Design</title>
-  <link rel="stylesheet" href="style.css" />
+<!--  StyleSheet  -->
+  <link rel="stylesheet" href="css/style.css" />
+<!--  Font Awesome  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
+<!--  Google Fonts  -->
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Josefin+Slab:ital,wght@0,400;0,600;1,300;1,400;1,600&family=Muli:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap" rel="stylesheet" />
 </head>
 
