--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <h4 class="project-technologies">ReactJS</h4>
           </div>
           <img src="images/project-2.jpg" class="project-img" />
-          <a href="https://www.youtube.com/watch?v=fDffQYs2WB0" class="project-link" target="_blank">Go to Website</a>
+          <a href="#" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -154,7 +154,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-3.jpg" class="project-img" />
-          <a href="https://www.youtube.com/watch?v=jtmuopTpzGE" class="project-link" target="_blank">Go to Website</a>
+          <a href="#" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -162,7 +162,7 @@
             <h4 class="project-technologies">ReactJS</h4>
           </div>
           <img src="images/project-4.jpg" class="project-img" />
-          <a href="https://www.youtube.com/watch?v=fqup-BL3VjI" class="project-link" target="_blank">Go to Website</a>
+          <a href="#" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -170,7 +170,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-5.jpg" class="project-img" />
-          <a href="https://www.youtube.com/watch?v=qmyN7lYY_xo" class="project-link" target="_blank">Go to Website</a>
+          <a href="#" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -178,7 +178,7 @@
             <h4 class="project-technologies">ReactJS</h4>
           </div>
           <img src="images/project-6.jpg" class="project-img" />
-          <a href="https://www.youtube.com/watch?v=d1vT4kkTCaw" class="project-link" target="_blank">Go to Website</a>
+          <a href="#" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -194,7 +194,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-8.jpg" class="project-img" />
-          <a href="https://www.youtube.com/watch?v=9Q7wy8r3i8w" class="project-link" target="_blank">Go to Website</a>
+          <a href="#" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
