--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Section 1 -->
     <section class="section-1 center" id="section-1">
       <h1 class="section-1-heading">
-        A Front End Developer
+        A Full Stack Developer
       </h1>
       <img src="images/KenB.jpg" alt="Ken Barrameda" class="person-img" />
       <h3 class="person-name">Ken Barrameda</h3>
@@ -150,7 +150,7 @@
         </div>
         <div class="project">
           <div class="project-text">
-            <h2 class="project-name">wine house</h2>
+            <h2 class="project-name"> the wine house</h2>
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-3.jpg" class="project-img" />
