--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/project-3.jpg" class="project-img" />
-          <a href="#" class="project-link" target="_blank">Go to Website</a>
+          <a href="TheWineHouse/index.html" class="project-link" target="_blank">Go to Website</a>
         </div>
         <div class="project">
           <div class="project-text">
